<resources>
    <string name="app_name">Studentenklatschen</string>

    //Questioncataloge
    <string name="frage1">Dein Youtube-Feed</string>
    <string name="aw1sn">Lets Plays</string>
    <string name="aw1uf">Meinungsblogger zu Politik und Gesellschaft</string>
    <string name="aw1tp">Mein Internet ist kaputt</string>
    <string name="aw1st">Beauty und Lifestyle #blogger #ootd</string>
    <string name="frage2">Deine Spotify-Playlist</string>
    <string name="aw2sn">Chillige Vibes</string>
    <string name="aw2uf">Podcasts</string>
    <string name="aw2tp">Ich peppe zu Techno</string>
    <string name="aw2st">Charts</string>
    <string name="frage3">Du gehst zur Vorlesung?</string>
    <string name="aw3sn">Schnarch. Wie, heute?</string>
    <string name="aw3uf">Ich bin vor dem Prof da.</string>
    <string name="aw3tp">Ich hab die Bahn verpasst</string>
    <string name="aw3st">Ich bin pünktlich, damit auch jeder mein Make-Up bewundern kann</string>
    <string name="frage4">Gehst du zur Übung?</string>
    <string name="aw4sn">Welche Übung? War die auch heute?</string>
    <string name="aw4uf">Ich gehe zu jeder Übung. Die Aufgaben habe ich schon vorbereitet.</string>
    <string name="aw4tp">Würde ich gern, wenn ich den Raum finden würde.</string>
    <string name="aw4st">Klar, irgendwo muss ich doch den neusten Gossip austauschen.</string>
    <string name="frage5">Gehst du gern feiern?</string>
    <string name="aw5sn">Niemals.. ich Netflixe</string>
    <string name="aw5uf">Nur wenn am nächsten Tag keine Vorlesungen stattfinden</string>
    <string name="aw5tp">Zu Riskant! Ich lande sonst wieder im Graben.</string>
    <string name="aw5st">So oft wie möglich! Ich muss mich präsentieren.</string>
    <string name="frage6"> Was isst du in der Mensa?</string>
    <string name="aw6sn">Currywurst Pommes</string>
    <string name="aw6uf">Nährstoffreiche Gerichte- nur das beste</string>
    <string name="aw6tp">Nix mit Soße… Gefahrminimierung</string>
    <string name="aw6st">Salat #hashtag #foodporn</string>
    <string name="frage7">Du musst morgen eine Präsentation halten. Wie läuft die ab?</string>
    <string name="aw7sn">Ich fange heute Nacht an.</string>
    <string name="aw7uf">Super! Ich bin schon seit 2 Wochen fertig.</string>
    <string name="aw7tp">Ich hatte alles fertig und jetzt lässt sich die Präsi nicht mehr öffnen.</string>
    <string name="aw7st">Outfittechnisch ist alles vorbereitet #prepared</string>
    <string name="frage8">Gruppenarbeit.</string>
    <string name="aw8sn">Ich hab verpennt, in welcher Gruppe ich gelandet bin.</string>
    <string name="aw8uf">Hab schon alles organisiert und die Arbeitsverteilung durchgeplant.</string>
    <string name="aw8tp">Ich bin krank und bekomme die Aufgabe, die ich am wenigsten mag.</string>
    <string name="aw8st">Ich mach alles, solange meine Gelnägel heile bleiben.</string>
    <string name="frage9">Während der Vorlesung.</string>
    <string name="aw9sn">Ich hab schon verschlafen, dann brauch ich eh nicht mehr kommen.</string>
    <string name="aw9uf">Ich denke und schreibe aktiv alles mit, was der Prof sagt.</string>
    <string name="aw9tp">Ich muss aufs Klo und sitze ausgerechnet in der Mitte der Reihe.</string>
    <string name="aw9st">#selfie #coffeefirst #qualitytime</string>
    <string name="schieberegler1">Bist du ein ordentlicher Mensch?</string>
    <string name="schieberegler2">Du gehst gern auf Leute zu.</string>
    <string name="schieberegler3">Bist du extrovertiert?</string>
    <string name="sra">Nein.</string>
    <string name="srb">Ja.</string>
    <string name="nichts">Nichts davon.</string>
    <string name="weiter">Weiter</string>
    <string name="fertig">Fertig</string>

    //Fight
    <string name="challengeLeft">Tilt device to the left</string>
    <string name="challengeRight">Tilt device to the right</string>
    <string name="challengeUpsideDown">Turn device upside down</string>
    <string name="challengeShake">Shake</string>
    <string name="challengeHold">Do not move</string>
    <string name="challengeSwipeLeft">Swipe Left</string>
    <string name="challengeSwipeRight">Swipe Right</string>
    <string name="challengeSwipeUp">Swipe Up</string>
    <string name="challengeSwipeDown">Swipe Down</string>
    <string name="success">Du hast einen Treffe gelandet. Dein Gegner erleidet Schaden in Höhe von </string>
    <string name="miss">Das ging leider daneben.</string>


    <string name="charaSn">Schnarchnase</string>
    <string name="charaUf">Überflieger</string>
    <string name="charaTp">Tollpatsch</string>
    <string name="charaSt">Snapchat Tussi</string>

    <string name="title_activity_login">Login</string>

    <string name="loading">Loading…</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    //TRAVEL
    <string name="travelDesc">Leg Dein Handy während der Vorlesung oder Übung weg und schick Deinen Charakter auf Reisen.
                            Je länger er unterwegs ist, desto mehr Punkte erhälst du und die Chance auf tolle Items steigt.</string>

    <string name="go">"Losrennen!"</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_menu">Menu</string>
    <string name="title_profile">Profil</string>
    <string name="title_shop">Shop</string>
    <string name="title_travel">Reise</string>
    <string name="title_fight">Kampf</string>

</resources>
