<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_travel"
        android:enabled="true"
        android:icon="@drawable/ic_reise"
        android:title="@string/title_travel"/>

    <item
        android:id="@+id/action_shop"
        android:enabled="true"
        android:icon="@drawable/ic_shop"
        android:title="@string/title_shop"/>

    <item
        android:id="@+id/action_profil"
        android:enabled="true"
        android:icon="@drawable/ic_profil"
        android:title="@string/title_profile"/>

    <item
        android:id="@+id/action_fight"
        android:enabled="true"
        android:icon="@drawable/ic_kampf"
        android:title="@string/title_fight"/>
    
</menu>